--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	    <h1>Why I want to become a developer?</h1>
+    <p>developer are always great beacuse not to easy create new ways to life easy things ,the developer always thinging to create new things  </p>
     <script type="text/javascript" src="./script.js">
 </script>
 
